--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
       "aurelia-router": "npm:aurelia-router@^1.0.0-beta.1.2.1",
       "aurelia-templating-binding": "npm:aurelia-templating-binding@^1.0.0-beta.1.2.1",
       "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-beta.1.2.2",
-      "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-beta.1.2.0"
+      "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-beta.1.2.0",
+      "codemirror": "npm:codemirror@^5.14.0",
+      "css": "github:systemjs/plugin-css@^0.1.21"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.24",
