--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
       "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-beta.1.2.2",
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-beta.1.2.0",
       "codemirror": "npm:codemirror@^5.14.0",
-      "css": "github:systemjs/plugin-css@^0.1.21"
+      "css": "github:systemjs/plugin-css@^0.1.21",
+      "normalize.css": "npm:normalize.css@^4.1.1"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.24",
