--- a/query-engine/project.json
+++ b/query-engine/project.json
@@ -30,7 +30,7 @@
         "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0-*",
         "Microsoft.NETCore.App": {
             "type": "platform",
-            "version": "1.0.0-*"
+            "version": "1.0.0-rc2-3002659"
         }
     },
     "frameworks": {
