--- a/query-engine/project.json
+++ b/query-engine/project.json
@@ -28,6 +28,7 @@
         "Microsoft.EntityFrameworkCore.Relational.Design": "1.0.0-*",
         "Microsoft.Extensions.DependencyInjection": "1.0.0-*",
         "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0-*",
+        "Newtonsoft.Json": "7.0.1",
         "Microsoft.NETCore.App": {
             "type": "platform",
             "version": "1.0.0-rc2-3002659"
