--- a/shell/package.json
+++ b/shell/package.json
@@ -25,6 +25,7 @@
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-beta.1.2.0",
       "codemirror": "npm:codemirror@^5.14.0",
       "css": "github:systemjs/plugin-css@^0.1.21",
+      "jquery": "npm:jquery@^2.2.3",
       "normalize.css": "npm:normalize.css@^4.1.1"
     },
     "devDependencies": {
