--- a/shell/package.json
+++ b/shell/package.json
@@ -1,37 +1,34 @@
 {
-  "name": "frank",
-  "version": "0.1.0",
-  "description": "",
+  "name": "angular2-quickstart",
+  "version": "1.0.0",
   "scripts": {
-    "start": "electron electron-main.js"
+    "start": "electron electron-main.js",
+    "ts": "start tsc -w",
+    "lint": "tslint ./app/**/*.ts -t verbose",
+    "postinstall": "typings install",
+    "typings": "typings"
+  },
+  "dependencies": {
+    "@angular/common":  "2.0.0-rc.1",
+    "@angular/compiler":  "2.0.0-rc.1",
+    "@angular/core":  "2.0.0-rc.1",
+    "@angular/http":  "2.0.0-rc.1",
+    "@angular/platform-browser":  "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic":  "2.0.0-rc.1",
+    "@angular/router":  "2.0.0-rc.1",
+    "@angular/router-deprecated":  "2.0.0-rc.1",
+    "@angular/upgrade":  "2.0.0-rc.1",
+    "systemjs": "0.19.27",
+    "es6-shim": "^0.35.0",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "5.0.0-beta.6",
+    "zone.js": "^0.6.12",
+    "angular2-in-memory-web-api": "0.0.7",
+    "bootstrap": "^3.3.6"
   },
   "devDependencies": {
-    "electron-prebuilt": "^0.37.6",
-    "jspm": "^0.16.33"
-  },
-  "jspm": {
-    "dependencies": {
-      "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.0-beta.1.2.0",
-      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1.2.0",
-      "aurelia-event-aggregator": "npm:aurelia-event-aggregator@^1.0.0-beta.1.2.0",
-      "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.0.0-beta.1.2.1",
-      "aurelia-framework": "npm:aurelia-framework@^1.0.0-beta.1.2.2",
-      "aurelia-history-browser": "npm:aurelia-history-browser@^1.0.0-beta.1.2.0",
-      "aurelia-loader-default": "npm:aurelia-loader-default@^1.0.0-beta.1.2.1",
-      "aurelia-logging-console": "npm:aurelia-logging-console@^1.0.0-beta.1.2.0",
-      "aurelia-router": "npm:aurelia-router@^1.0.0-beta.1.2.1",
-      "aurelia-templating-binding": "npm:aurelia-templating-binding@^1.0.0-beta.1.2.1",
-      "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-beta.1.2.2",
-      "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-beta.1.2.0",
-      "codemirror": "npm:codemirror@^5.14.0",
-      "css": "github:systemjs/plugin-css@^0.1.21",
-      "jquery": "npm:jquery@^2.2.3",
-      "normalize.css": "npm:normalize.css@^4.1.1"
-    },
-    "devDependencies": {
-      "babel": "npm:babel-core@^5.8.24",
-      "babel-runtime": "npm:babel-runtime@^5.8.24",
-      "core-js": "npm:core-js@^1.1.4"
-    }
+    "electron-prebuilt": "^0.37.8",
+    "typescript": "^1.8.10",
+    "typings": "^0.8.1"
   }
 }
