--- a/shell/package.json
+++ b/shell/package.json
@@ -1,30 +1,32 @@
 {
-  "name": "angular2-quickstart",
-  "version": "1.0.0",
+  "name": "shell",
+  "version": "0.1.0",
   "scripts": {
     "start": "electron electron-main.js",
     "ts": "start tsc -w",
     "lint": "tslint ./app/**/*.ts -t verbose",
-    "postinstall": "typings install",
     "typings": "typings"
   },
   "dependencies": {
-    "@angular/common":  "2.0.0-rc.1",
-    "@angular/compiler":  "2.0.0-rc.1",
-    "@angular/core":  "2.0.0-rc.1",
-    "@angular/http":  "2.0.0-rc.1",
-    "@angular/platform-browser":  "2.0.0-rc.1",
-    "@angular/platform-browser-dynamic":  "2.0.0-rc.1",
-    "@angular/router":  "2.0.0-rc.1",
-    "@angular/router-deprecated":  "2.0.0-rc.1",
-    "@angular/upgrade":  "2.0.0-rc.1",
-    "systemjs": "0.19.27",
+    "@angular/common": "2.0.0-rc.1",
+    "@angular/compiler": "2.0.0-rc.1",
+    "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "2.0.0-rc.1",
+    "@angular/platform-browser": "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
+    "@angular/router": "2.0.0-rc.1",
+    "@angular/router-deprecated": "2.0.0-rc.1",
+    "@angular/upgrade": "2.0.0-rc.1",
+    "angular2-in-memory-web-api": "0.0.7",
+    "bootstrap": "^3.3.6",
     "es6-shim": "^0.35.0",
+    "moment": "^2.13.0",
+    "ng2-bootstrap": "^1.0.16",
+    "normalizecss": "^3.0.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
-    "zone.js": "^0.6.12",
-    "angular2-in-memory-web-api": "0.0.7",
-    "bootstrap": "^3.3.6"
+    "systemjs": "0.19.27",
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
     "electron-prebuilt": "^0.37.8",
