--- a/shell/package.json
+++ b/shell/package.json
@@ -19,6 +19,7 @@
     "@angular/upgrade": "2.0.0-rc.1",
     "angular2-in-memory-web-api": "0.0.7",
     "bootstrap": "^3.3.6",
+    "codemirror": "^5.14.2",
     "es6-shim": "^0.35.0",
     "moment": "^2.13.0",
     "ng2-bootstrap": "^1.0.16",
