--- a/shell/package.json
+++ b/shell/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^3.3.6",
     "codemirror": "^5.14.2",
     "es6-shim": "^0.35.0",
+    "lodash": "^4.12.0",
     "moment": "^2.13.0",
     "ng2-bootstrap": "^1.0.16",
     "normalizecss": "^3.0.0",
