--- a/shell/package.json
+++ b/shell/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.12.0",
     "moment": "^2.13.0",
     "ng2-bootstrap": "^1.0.16",
+    "node-uuid": "^1.4.7",
     "normalizecss": "^3.0.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
