--- a/shell/package.json
+++ b/shell/package.json
@@ -27,6 +27,9 @@
     "node-uuid": "^1.4.7",
     "normalizecss": "^3.0.0",
     "reflect-metadata": "^0.1.3",
+    "retyped-angular2-tsd-ambient": "^1.6.2-0",
+    "retyped-codemirror-tsd-ambient": "0.0.0-0",
+    "retyped-es6-shim-tsd-ambient": "^0.31.2-0",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.27",
     "zone.js": "^0.6.12"
@@ -34,6 +37,7 @@
   "devDependencies": {
     "electron-prebuilt": "^0.37.8",
     "typescript": "^1.8.10",
-    "typings": "^0.8.1"
+    "retyped-codemirror-tsd-ambient": "*",
+    "retyped-lodash-tsd-ambient": "*"
   }
 }
